// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tip matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Tip
    classes={
      Object {
        "container": "container",
        "error": "error",
        "icon": "icon",
        "info": "info",
        "success": "success",
        "warning": "warning",
      }
    }
    theme="info"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <UNDEFINED
        className="container info"
        display="flex"
        justifyContent="start"
      >
        <UNDEFINED
          flex="1"
        >
          <UNDEFINED
            info={true}
            standard={true}
            tag="div"
          />
        </UNDEFINED>
      </UNDEFINED>,
      "className": undefined,
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          undefined,
          <UNDEFINED
            flex="1"
          >
            <UNDEFINED
              info={true}
              standard={true}
              tag="div"
            />
          </UNDEFINED>,
        ],
        "className": "container info",
        "display": "flex",
        "justifyContent": "start",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <UNDEFINED
              info={true}
              standard={true}
              tag="div"
            />,
            "flex": "1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                undefined,
              ],
              "info": true,
              "standard": true,
              "tag": "div",
            },
            "ref": null,
            "rendered": Array [
              undefined,
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Text)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "InnerComponent": [Function],
            "displayName": "JssContextSubscriber(Flexbox)",
            "propTypes": Object {
              "alignContent": [Function],
              "alignItems": [Function],
              "alignSelf": [Function],
              "children": [Function],
              "className": [Function],
              "direction": [Function],
              "display": [Function],
              "flex": [Function],
              "id": [Function],
              "justifyContent": [Function],
              "order": [Function],
              "style": [Function],
              "wrap": [Function],
            },
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "InnerComponent": [Function],
        "displayName": "JssContextSubscriber(Flexbox)",
        "propTypes": Object {
          "alignContent": [Function],
          "alignItems": [Function],
          "alignSelf": [Function],
          "children": [Function],
          "className": [Function],
          "direction": [Function],
          "display": [Function],
          "flex": [Function],
          "id": [Function],
          "justifyContent": [Function],
          "order": [Function],
          "style": [Function],
          "wrap": [Function],
        },
        "render": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <UNDEFINED
          className="container info"
          display="flex"
          justifyContent="start"
        >
          <UNDEFINED
            flex="1"
          >
            <UNDEFINED
              info={true}
              standard={true}
              tag="div"
            />
          </UNDEFINED>
        </UNDEFINED>,
        "className": undefined,
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            undefined,
            <UNDEFINED
              flex="1"
            >
              <UNDEFINED
                info={true}
                standard={true}
                tag="div"
              />
            </UNDEFINED>,
          ],
          "className": "container info",
          "display": "flex",
          "justifyContent": "start",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <UNDEFINED
                info={true}
                standard={true}
                tag="div"
              />,
              "flex": "1",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  undefined,
                ],
                "info": true,
                "standard": true,
                "tag": "div",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Text)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Flexbox)",
              "propTypes": Object {
                "alignContent": [Function],
                "alignItems": [Function],
                "alignSelf": [Function],
                "children": [Function],
                "className": [Function],
                "direction": [Function],
                "display": [Function],
                "flex": [Function],
                "id": [Function],
                "justifyContent": [Function],
                "order": [Function],
                "style": [Function],
                "wrap": [Function],
              },
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "InnerComponent": [Function],
          "displayName": "JssContextSubscriber(Flexbox)",
          "propTypes": Object {
            "alignContent": [Function],
            "alignItems": [Function],
            "alignSelf": [Function],
            "children": [Function],
            "className": [Function],
            "direction": [Function],
            "display": [Function],
            "flex": [Function],
            "id": [Function],
            "justifyContent": [Function],
            "order": [Function],
            "style": [Function],
            "wrap": [Function],
          },
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Tip styles matches the snapshot 1`] = `
Object {
  "container": Object {
    "borderRadius": 6,
    "padding": 16,
  },
  "error": Object {
    "backgroundColor": "rgba(219, 55, 55, 0.1)",
  },
  "icon": Object {
    "marginRight": 8,
  },
  "info": Object {
    "backgroundColor": "rgba(87, 54, 171, 0.1)",
  },
  "success": Object {
    "backgroundColor": "rgba(0, 149, 55, 0.1)",
  },
  "warning": Object {
    "backgroundColor": "rgba(255, 197, 73, 0.1)",
  },
}
`;

exports[`TipJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
